--- a/Seminare/Seminare.vcxproj
+++ b/Seminare/Seminare.vcxproj
@@ -141,6 +141,8 @@
   <ItemGroup>
     <ClCompile Include="seminar1.c" />
     <ClCompile Include="seminar2.c" />
+    <ClCompile Include="seminar3.c" />
+    <ClCompile Include="seminar4.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
