--- a/Seminare/Seminare.vcxproj.filters
+++ b/Seminare/Seminare.vcxproj.filters
@@ -21,5 +21,11 @@
     <ClCompile Include="seminar2.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="seminar3.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="seminar4.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
